Separación del index y el .js - FiFo
Se separó el javascript del archivo index para darle un mayor
entendimiento y mantenibilidad

--- a/Taximetro/index.html
+++ b/Taximetro/index.html
@@ -11,54 +11,14 @@
         <title>DJTaxi</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
-        <script type="text/javascript">
-
-        
-     	// Variable para la localizacion
-      	var lc;
-      	// variable de PhoneGap 
-      	var pgr = false;
-
-      	function onBodyLoad() {
-        	// agrega un listener para detectar eventos
-        	document.addEventListener("deviceready", onDeviceReady, false);
-      	}
-
-      	function onDeviceReady() {
-        	// Encuentra el tag html donde se escribira la ubicación
-        	lc = document.getElementById("locationInfo");
-        	// Bandera para saber que todo va bien con Phonegap
-        	pgr = true;
-      	}
-
-      	function getLocation() {
-        	if(pgr == true) {
-          		var locOptions = {
-            	timeout : 5000,
-            	enableHighAccuracy : true
-          		};
-          		// Encuentra la ubicación actual
-          		navigator.geolocation.getCurrentPosition(onLocationSuccess, onLocationError, locOptions);
-          		// Limpia el texto mientras se encuentra la ubicación
-          		lc.innerHTML = "Leyendo la localización...";
-        	} else {
-          		alert("PhoneGap no funciona.");
-        	}
-      	}
-
-      	function onLocationSuccess(loc) {
-        	alert("onLocationSuccess");
-        	// Haya la hora actual
-        	var d = new Date(loc.timestamp);
-        	// Reemplaza el texto html con los datos encontrados
-        	lc.innerHTML = '<b>Current Location</b><hr /><b>Latitude</b>: ' + loc.coords.latitude + '<br /><b>Longitude</b>: ' + loc.coords.longitude + '<br /><b>Altitude</b>: ' + loc.coords.altitude + '<br /><b>Accuracy</b>: ' + loc.coords.accuracy + '<br /><b>Altitude Accuracy</b>: ' + loc.coords.altitudeAccuracy + '<br /><b>Heading</b>: ' + loc.coords.heading + '<br /><b>Speed</b>: ' + loc.coords.speed + '<br /><b>Timestamp</b>: ' + d.toLocaleString();
-      	}
-
-      	function onLocationError(e) {
-        	alert("Geolocation error: #" + e.code + "\n" + e.message);
-      	}
-    	</script>
+        <script type="text/javascript" src="functions.js">
+       	// Variable para la localizacion
+        	var lc;
+        	// variable de PhoneGap 
+        	var pgr = false;
+      	</script>
     </head>
+
     <body onload="onBodyLoad()">
       <header>
         <div class"container" class="row">
