creación función obtenerPago, funciona según el número de unidades y fecha que tenga

--- a/Taximetro/index.html
+++ b/Taximetro/index.html
@@ -52,7 +52,7 @@
           <div class="col-sm-4">
             <div class="jumbotron">
               <center>
-                <p>Contador - Taximetro</p>
+                <p id="counter">Contador - Taximetro</p>
               </center>
             </div>
           </div>
