--- a/Taximetro/index.html
+++ b/Taximetro/index.html
@@ -45,7 +45,7 @@
         <div class="row">
           <div class="col-sm-4">
 
-            <center><input type="button" class="btn btn-warning" value="Empezar" onclick="getLocation();"></center>
+            <center><input type="button" class="btn btn-warning" value="Empezar" onclick="fecha();"></center>
 
           </div>
 
