--- a/Taximetro/index.html
+++ b/Taximetro/index.html
@@ -34,12 +34,15 @@
       <p id="title">DJ - Taxi</p>
         <hr />
     	<p id="locationInfo">
-      	<div class="progress">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-          ...Calculando Ubicación y Contabilizando...
-          </div>
-        </div>
+      	
     	</p>
+
+      <div class="container">
+        <div class="col-sm-12">
+          <center><h3 id="fechaHora"> </h3></center>
+        </div>
+        
+      </div>
 
       <div class="container-fluid">
         <div class="row">
@@ -59,7 +62,6 @@
 
           <div class="col-sm-4">
 
-            <p id="fechaHora"> </p>
             <p id="inicio"> </p>
             <p id="precioActual"> </p>
 
@@ -67,6 +69,12 @@
 
           </div>
         </div>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+          ...Calculando Ubicación y Contabilizando...
+          </div>
+        </div>
+
       </div>
 
     </body>
