--- a/Taximetro/index.html
+++ b/Taximetro/index.html
@@ -34,35 +34,47 @@
       <p id="title">DJ - Taxi</p>
         <hr />
     	<p id="locationInfo">
-      	<div class="progress">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-          ...Calculando Ubicación y Contabilizando...
-          </div>
-        </div>
+      	
     	</p>
+
+      <div class="container">
+        <div class="col-sm-12">
+          <center><h3 id="fechaHora"> </h3></center>
+        </div>
+        
+      </div>
 
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-4">
 
-            <center><input type="button" class="btn btn-warning" value="Empezar" onclick="fecha();"></center>
+            <center><input type="button" class="btn btn-warning" value="Empezar" onclick="Geolocation();"></center>
 
           </div>
 
           <div class="col-sm-4">
             <div class="jumbotron">
               <center>
-                <p id="counter">Contador - Taximetro</p>
+                <p id="counter"></p>
               </center>
             </div>
           </div>
 
           <div class="col-sm-4">
 
-            <center><input type="button" class="btn btn-warning" value="Terminar" onclick="getLocation();"></center>
+            <p id="inicio"> </p>
+            <p id="precioActual"> </p>
+
+            <center><input type="button" class="btn btn-warning" value="Terminar" onclick="Geolocation();"></center>
 
           </div>
         </div>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+          ...Calculando Ubicación y Contabilizando...
+          </div>
+        </div>
+
       </div>
 
     </body>
